--- a/.devcontainer.json
+++ b/.devcontainer.json
@@ -30,7 +30,8 @@
                 "editor.formatOnPaste": false,
                 "editor.formatOnSave": true,
                 "editor.formatOnType": true,
-                "files.trimTrailingWhitespace": true
+                "files.trimTrailingWhitespace": true,
+                "mypy-type-checker.importStrategy": "fromEnvironment",
             }
         }
     },
