--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
-async-retrying==0.2.2
-colorlog==6.8.2
-homeassistant==2024.5.4
-pip==24.0
-python-dateutil==2.8.2
-numpy==1.26.4
-mutagen==1.47.0
+async-retrying>=0.2.2
+colorlog>=6.8.2
+homeassistant==2024.6.0
+pip>=24.0
+python-dateutil>=2.8.2
+numpy>=1.26.4
+mutagen>=1.47.0
